# Informacao_e_Codificacao_Projetos

IC/sndfile-example-bin/: BitStreamDecoder  BitStreamEncoder  wav_cmp  wav_cp  wav_dct  wav_effects  wav_hist  wav_quant
IC/sndfile-example-src/: BitStream.cpp  BitStreamDecoder.cpp  BitStreamEncoder.cpp  CMakeLists.txt  MID.txt  README  SIDE.txt  copy2.wavmake  dct_codificado  dct_descodificado_0  dct_descodificado_1  escrever_dct_0  escrever_dct_1  ficheiro_codificado  wav_cp.cpp  wav_dct.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp
IC2/IC_projeto2/: README.md
IC2/IC_projeto2/opencv-example-bin/: aux2  codificador_Golomb  codificador_Golomb_imagem  cp_effects  cp_image  descoficador_Golomb  descoficador_Golomb_imagem  ficheiro_codificado  test_Golomb  wav_cmp
IC2/IC_projeto2/opencv-example-src/: BitStream.cpp  CMakeLists.txt  Golomb.cpp  Makefile  codificador_Golomb.cpp  codificador_Golomb_imagem.cpp  cp_effects.cpp  cp_image.cpp  descoficador_Golomb.cpp  descoficador_Golomb_imagem.cpp  test_Golomb.cpp  wav_cmp.cpp
IC3/IC_projeto3/: README.md
IC3/IC_projeto3/src/: CMakeLists.txt  fcm.cpp  fcm_novo.cpp  findlang.cpp  lang.cpp  locatelang.cpp  test_fcm.cpp
IC3/IC_projeto3/src/models/: Arabic.utf8  Czech.utf8  French.utf8  Greek.utf8  Hindi.utf8  Italian.utf8  Italianmodel.txt  Japanese.utf8  Latin.utf8  PT.utf8  PTmodelo.txt  Portugese.utf8  Portugesemodelo.txt  Russian.utf8  Spanish.utf8  Thai.utf8  Yiddish.utf8  simple.txt
